WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218025
Don't crash when deallocating WKWebView during TLS handshake
https://bugs.webkit.org/show_bug.cgi?id=218025
Summary
Don't crash when deallocating WKWebView during TLS handshake
Alex Christensen
Reported
2020-10-21 08:20:55 PDT
Don't crash when deallocating WKWebView during TLS handshake
Attachments
Patch
(5.25 KB, patch)
2020-10-21 08:24 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-10-21 08:24:43 PDT
Created
attachment 411987
[details]
Patch
Alex Christensen
Comment 2
2020-10-21 08:24:47 PDT
<
rdar://problem/70225969
>
EWS
Comment 3
2020-10-21 09:01:36 PDT
Committed
r268796
: <
https://trac.webkit.org/changeset/268796
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411987
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug